# CodeAgentX

./: .env.example  .replit  app.py  llms.txt  pyproject.toml  replit.md
.well-known/: agent.json  ai.txt
ai/: faq.json  summary.json
attached_assets/: Pasted-Skip-to-content-Navigation-Menu-virattt-dexter-Code-Issues-Pull-requests-2-An-autonomous-agent-for--1760601998305_1760601998311.txt
src/dexter/: agent.py  database.py  model.py  options_tools.py  prompts.py  scheduler.py  schemas.py  screening_tools.py  tools.py
src/dexter/utils/: charts.py  discord.py  export.py  safety.py  validation.py
