[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
