[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "google-generativeai>=0.8.5",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]
